[gd_scene load_steps=10 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
alignment = 2

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 964.0
margin_bottom = 463.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 467.0
margin_right = 964.0
margin_bottom = 540.0
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 887.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 891.0
margin_right = 964.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -31.5
margin_right = 29.0
margin_bottom = 31.5
custom_fonts/font = SubResource( 3 )
text = "Ok"

[node name="Storybook" type="Node" parent="."]

[node name="Story0" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "adverb", "adjective" )
story = "Once upon a time someone called %s ate a %s a %s flavoured and was %s"

[node name="Story1" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "adverb", "adjective" )
story = "Once upon a time someone called %s ate a %s a %s flavoured and was %s"

[node name="Story2" type="Node" parent="Storybook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "adverb", "adjective" )
story = "Once upon a time someone called %s ate a %s a %s flavoured and was %s"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_button_up"]
